--- a/src/assets/style/edaPage.scss
+++ b/src/assets/style/edaPage.scss
@@ -1,13 +1,36 @@
 .eda {
   min-width: 1520px;
-  height: calc(100vh - 10px);
+  height: calc(100vh - 20px);
   padding: 10px;
   background: #e7f9f9;
 
-  h1 {
-    font-size: 24px;
-    font-weight: 700;
+  header {
+    display: flex;
+    align-items: center;
+    gap: 12px;
     margin-bottom: 10px;
+    height: 40px;
+
+    h1 {
+      font-size: 24px;
+      font-weight: 700;
+      margin-right: 12px;
+    }
+
+    .option_area {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      span {
+        height: 20px;
+        line-height: 24px;
+        margin-right: 4px;
+      }
+      select {
+        height: 20px;
+      }
+    }
   }
 
   .layout {
@@ -18,25 +41,37 @@
 
     .area {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: calc(100% - 10px);
       border: 1px solid #ddd;
 
-      .option {
-        span {
-          margin-left: 20px;
-        }
-      }
-
       .chart {
+        width: 100%;
         height: 100%;
       }
 
       iframe {
         width: 100%;
         height: 100%;
+      }
+    }
+    .area.info_chart {
+      display: grid;
+      grid-template-columns: 200px 1fr;
+
+      .option_area {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+        height: calc(100% - 20px);
+        padding: 10px;
+
+        li {
+          display: inline-block;
+          margin-bottom: 12px;
+        }
       }
     }
   }
